--- a/war/index.html
+++ b/war/index.html
@@ -75,6 +75,10 @@
                 <li><a href="">参考グラフィックデザイン</a></li>
                 <li><a href="">参考Webデザイン</a></li>
             </ul>
+            <br/>
+            <ul id="admin_link">
+                <li><a href="admin.html">管理画面へ</a></li>
+            </ul>
         </div>
     </div>
     <div id="footer">フッター</div>
